name:                pure-portal
version:             0.7.0.0
synopsis: 
homepage:            github.com/grumply/pure-portal
license:             BSD3
license-file:        LICENSE
author:              Sean Mackenzie
maintainer:          sean@grump.ly
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:
      Pure.Portal

  build-depends:
      base >=4.8
    , pure >= 0.7 && < 1
    , pure-prop >= 0.7 && < 1
    , pure-proxy >= 0.7 && < 1
    , pure-txt >= 0.7 && < 1

  hs-source-dirs:      src
  default-language:    Haskell2010
