name:                pure-portal
version:             0.8.0.0
homepage:            purehs.org/doc/pure-portal
license:             BSD3
license-file:        LICENSE
author:              Sean Hickman
maintainer:          sean@grumply.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type: git
  location: https://github.com/grumply/pure-portal.git

library
  exposed-modules:
      Pure.Portal

  build-depends:
      base
    , pure
    , pure-cond
    , pure-prop
    , pure-proxy
    , pure-txt
    , pure-transition

  hs-source-dirs:      src
  default-language:    Haskell2010
